# macguffin-hunt

./: .gitignore  Cargo.toml  graph.txt  index.html
.github/workflows/: static.yml
data/: data.csv
src/: generate.rs  main.rs
