[package]
name = "macguffin-hunt"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "generate"
path = "src/generate.rs"

[dependencies]
csv = "1.4.0"
itertools = "0.14.0"
pathfinding = "4.14.0"
petgraph = "0.8.3"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
upon = "0.10.0"
